--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 A game for OCTGN by bowtochris.
 
 Installation:
-Put the "15b5f8de-44ec-4506-a7a0-9e4e9b29f379" folder in you .\OCTGN\Data\GameDatabase directory, wherever you configured OCTGN to look for your games.
+Put the "15b5f8de-44ec-4506-a7a0-9e4e9b29f379" folder in your .\OCTGN\Data\GameDatabase directory, wherever you configured OCTGN to look for your games.
